# cafa-multiholdout-eval

./: README.md  build_cafa5_holdout.py  evaluate_submission_holdout.py  pyproject.toml  terms_of_interest.txt  toi_generation.py
CAFA-evaluator-PK-main/: .gitignore  README.md
CAFA-evaluator-PK-main/example/: README.md  go-sample.obo  ground_truth_limited.tsv  ground_truth_partial.tsv  known_t0.tsv  toi.tsv
ground_truth/: ground_truth.214_215.tsv  ground_truth.215_216.tsv  ground_truth.216_217.tsv  ground_truth.217_218.tsv  ground_truth.218_219.tsv  ground_truth.219_220.tsv  ground_truth.220_221.tsv  ground_truth.221_222.tsv  ground_truth.222_223.tsv  ground_truth.223_224.tsv  ground_truth.224_225.tsv  ground_truth.225_226.tsv  ground_truth.226_227.tsv  ground_truth.227_228.merged.tsv  ground_truth.227_228.tsv
results_submission_delta/216_217/: evaluation_all.tsv  evaluation_best_f.tsv  evaluation_best_f_micro.tsv  evaluation_best_f_micro_w.tsv  evaluation_best_f_w.tsv  evaluation_best_s.tsv
results_submission_delta/217_218/: evaluation_all.tsv  evaluation_best_f_micro.tsv  evaluation_best_f_micro_w.tsv  evaluation_best_f_w.tsv  evaluation_best_s.tsv
results_submission_delta/226_227/: evaluation_all.tsv  evaluation_best_f.tsv  evaluation_best_f_micro.tsv  evaluation_best_f_micro_w.tsv  evaluation_best_f_w.tsv  evaluation_best_s.tsv
results_submission_delta/227_228.merged/: evaluation_all.tsv  evaluation_best_f.tsv  evaluation_best_f_micro.tsv  evaluation_best_f_micro_w.tsv  evaluation_best_f_w.tsv  evaluation_best_s.tsv
submissions/: sample.tsv
(+9 files in other folders)
