[project]
name = "cafa-multiholdout-eval"
version = "0.1.0"
description = ""
authors = [
    {name = "frapercan",email = "frapercan1@alum.us.es"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "cafaeval @ git+https://github.com/claradepaolis/CAFA-evaluator-PK.git"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
